@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST 1.2.tar.gz 8246 SHA256 a7d7f1bd603249043d55ed833dab747a1c8552b4ebacf4c9df8ec283760b3a85 SHA512 d6a45cbc800edcc00bc525216698fa9898c1e4d9f3c66827f102475a12a5f143ace5765ee5fece3dc5ab70f68d41d2552d1f0478ea927d88e15c618275d07d4e WHIRLPOOL 98697a4a67107b8c2e1166d8a32351ad94f7c0e562f9a94b3093ed4834b5fa8401fdd335ff345b929d8a09d3823ef41a6061ef3ff9d19cea7a93faa3f213710e
+DIST lcpackgen-1.3.tar.gz 8273 SHA256 0d569a892f4f533bcccf7c2b89849fd539c9847da5543f00ea5560b92be45893 SHA512 fd7b0eab958082ca421d87a8a15626d07ff2a65e54f7804fa227267e71310d958c3cf7954db897b7f737076249018a5e861bde371742fd3764252ee0bb876df5 WHIRLPOOL c0255fd0b0e51ebf1e6082cb7a2425c8990c5524a6bcbfa971715e768fe0d3c74811d00b03d58c0daccc24448d7900806534ac39a9d7c3bc8abab8fb4b5cbd9f
 EBUILD lcpackgen-1.2.ebuild 702 SHA256 b4bcc5a44c9b115e6982a7c6eb909369c5bc04d26d712ee68a272316181ad4c9 SHA512 e111094728fa5f249e65aef763dd0377c81c464b6cb307fc776f6d8dfff8a4f3ebc07d6632d1ad7ceb3e5af90a6f883feb907cb88a4c5ba380020c568b135717 WHIRLPOOL 7ee2f758a6f3027f087a7b099f26a35abcc5397176cdecea37f3fd22c707aaa7e9dc1f8c64566cd270e0e634aec49c4bcb012020a3d54a729b31a04493fbf37f
-MISC ChangeLog 404 SHA256 879f8c67117fd0dee9c0f7aa28a91e76acdb768f8e33552476a873ad91f30800 SHA512 8a8f27e6526618138a25bb3c2bdedc20374e8f826beccaa20c102fa643efea74bed2673b5a2a73b1d89595160436123250c7df4ae5dc40341872c8bce025f2cf WHIRLPOOL 27edf2b9ada914a86b006025b0e32b566de0d47b4d4f9947eadbf5afbfba5d0b31b980f6598ffce27367b5c00754400e0fc132a22575017c8ba2b9a0bb38d309
+EBUILD lcpackgen-1.3.ebuild 683 SHA256 64f8a429fa6c3b89e4584c0e6636da1bbc871dbbdcbcb305e3f67f6893f4ca35 SHA512 0639a4e4949f3cea83ab2fc55ec7c4f3ea8d16c91f30c661dce5e290789e33f8737ba0b985ee7efd30c48f1e1b62d25c1c51d010407b496ca427d83c94011408 WHIRLPOOL 36a459ce40772345aae394331ea206f9d508a5e2d54aef9b2ce99f5ebc396a153a47d9f48064b72825853ca7da580b25bb5deef6f4f49a4f27068ed1cc11f7e0
+MISC ChangeLog 546 SHA256 3a506418d2f69eeeda1a887fc1adfc07cfd94f502108213658c3ec578274fc53 SHA512 aa0c93ee61dc1ebd08e60c0b1c4825fe55c6540434d174e7aea5ba4fec1b97831c51e8736968178db78c658b1ced9956537573786d525a1dc7f7c1a454432f37 WHIRLPOOL afab38dd074477b8f24165528dd28da0adcff35d90d3eb09dd06d8d79a1b915978886eb7283de769a4af98d3e64b7b712e26a12bc3dcf7be3e74a0b8c394fede
 MISC metadata.xml 164 SHA256 d3d50c47cc72568dcc457fe11ddfc6849ba6572bc2d581aad1deac910ee1d488 SHA512 ce478accd06c9c530d86b3ca8abaf3680428a7ab07ed8bb5b78e60c7e3240c3be349993f73e2ef904642efec5cd9c8abb7196675b46723103290ef9ab5d1cc10 WHIRLPOOL 4c2d59059bc69ff27c720b093f582968e2778d23875e0f7d3edba0ec6634e1b50e7403974c4a32638eeaae4d7baf45ca163e5e80f5bd692590b7d075882d51f0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR1Fb5AAoJEAmJmMX429reVEUIAJR9DhkUfjJxWYbG2m3sorkI
-mdmcdjdA7s/1sQ4nLDdqlBSl8GLgHJNPCbH0AXgbNgakbd/HKUpxd4iLCtl+YNZw
-qN3WGO+9haGee3KeO2em9QAP3bCl+qUSviiN/dBfO2rwONTwUOwsBLi54o2JLFOB
-oQRrWAYxsNKM2x3slAcT6cWT2nhIC96OyXXvpRpB38bz0Xarzsyyq85C1ZTZEYFh
-Uqp8bahtRKSLckxL2XQ4+ypSuRSqSLNSqIeZXgSW5TthYUiqtIwwS3mg/Gq8EBCS
-OHpE85eL+cc2U6Tg3iM7PTe5MhhRDPCpwNKTzX+dk8cGSMQrhlKl3GUUGhLMT+M=
-=W065
+iQEcBAEBCAAGBQJSzRlgAAoJEAmJmMX429reeO8H/i0/LkVRxQ9e3ieR6cqC5pSR
+Wph0JI7Pyea9gB8LU7nhCyzxUlvQpW1+pLItprWoLppfhS4RObJUNt73zop/WREr
+HiHLEqJWESlkN5K4d6Q7B8alqpMS6xn6U/OoiQqpihMHaVwVQ8gqFwwAyhAGBVoZ
+rM8Yect6G5Zz73hpBlNMYoHW3m04FCLMy2pWZrsOLpmLZ0tUqVBf/qX4iJESdv89
+bZ0WZmj54/h+FMPa9C/UhVdXaO7PZqlJ/ZrLEuG6YuoJtKUOY/lLL5acbB1WP2p8
+q4yf4Kwau8xzbLy9sQB2sJle6yxL3/cVvzyeH8SnGmY73kopQf3VisW97mniuyc=
+=1MKr
 -----END PGP SIGNATURE-----
