@@ -1,17 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST liblaretz-0.1.0.tar.gz 11783 SHA256 9b0247c0f6ec043158369de0f28d89c7e8f5601a52866f6ba8e78e51e7b62ee9 SHA512 869361667c4872e694a875655dd33744925b6dab13977b9b93b87de52c8290f59206afc1ee711941dc698a12fd4ea38fae4f1bda6aaa750dd275dd2b1c8a0a53 WHIRLPOOL 169a1f1afe5e80472c26f6fc8e584dff5c079f98aae6c59e44bca2d6760d5e2b0c5d7da88a6a21da2ba70342703cc6e6af9636abb3a0dc213ee8c8ee1f9b8015
+EBUILD liblaretz-0.1.0.ebuild 630 SHA256 c390bfbe679d2d46f428280e05b94c002028e79ab3b550b7928961b2526edb49 SHA512 f28f4a9dd23c37962e27d889abc0c71d7e64261b6548dacb0b56b18c9dda7f8d10753d36def6aeef7a7078942312d514486bc1cef28eb7461c344fb53b07927a WHIRLPOOL dc3e79d4d8102a905d1f18f8afc45865435a91ffcb445bd4773a07df185865af803f05bb48b5fe2c45674ff345a3f97832f770c1bb96b9109981d979bc2ea593
 EBUILD liblaretz-9999.ebuild 585 SHA256 c186261f40875d2b6ca8fc9fa1aca3ff224300cbadd33214a6c8845ca645be89 SHA512 0e3756ea9f447eada96206eb4201ca8b696cc88778ae23ca021eaefc96b151cc38d9df747b93b3aad1495f9cde9a0830f785ba4abb073351e200b0d749e26907 WHIRLPOOL 01e5fc072e1c0c34d84bd9597e2fc939e1a072f12575c6447a438300c1981e1087a42169eb05def5fcaab354b7e51e6a5466383acb45186477d40d921a63cb98
-MISC ChangeLog 386 SHA256 4cac36ae1ca8a61d8150a6d7d7745aa7d4e5647b3b8994f64e2044ed543449a3 SHA512 7cdc804b64a0de0f7d641e8e2979968ea192e65dd1eeb4591e0e6df1edfe643692c75073c6c333177c53a88266feb3ede56bc7edefab6d1da7047166728ffbdd WHIRLPOOL 557fc7b2497974c7a355dfe9e979b99f917ba906a4486f2c42a65a541822049b8d20d658f4d05344162ee4afee6cd9370bba2493b70d25e16e177c2f2454b8c3
+MISC ChangeLog 538 SHA256 db9b2e6ebe8224d217606e46375f9315c9a65adfcc89cef8e6e31402369435ae SHA512 fed6967c77bf97c85813e2265bb7bdd0de318f67030a94fb35eba16341d0d44d994de4762707f2f6f68e00df7851a00531c632e9a2319bd5c5cfa29c97261f05 WHIRLPOOL 8444acf550119eced11bf37abf4b6249550f1b4b6024f26271f8b70ab1dc935510b625c1eb81b7d9e4ed27868a1c3a5614171fbb9e821e7692ff5baea8730ec0
 MISC metadata.xml 164 SHA256 d3d50c47cc72568dcc457fe11ddfc6849ba6572bc2d581aad1deac910ee1d488 SHA512 ce478accd06c9c530d86b3ca8abaf3680428a7ab07ed8bb5b78e60c7e3240c3be349993f73e2ef904642efec5cd9c8abb7196675b46723103290ef9ab5d1cc10 WHIRLPOOL 4c2d59059bc69ff27c720b093f582968e2778d23875e0f7d3edba0ec6634e1b50e7403974c4a32638eeaae4d7baf45ca163e5e80f5bd692590b7d075882d51f0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR6vBiAAoJEAmJmMX429reeKEIAKHHMZmS1pOikdw8NxQf4crX
-SrD1DgbE3u5QntAJUVM5p6nfbuSJRTWuZ4MhUftBs4T5H2hRmcFjM4C8FJGq6QDW
-+iMMSwRc8hEJ0GVXteqrIsDej7J2RmT9hIGk2MvKw56D2k87OlzPvqXshJc4CImR
-vPCXZzmrw7K0QpEkaxDjSnSO+RQogGRH61uOXVkpz61gj/F/60x6rizcYtRSPW2M
-BvJQkkEoRjxZ0OR5AOqCqrGa7rRhRyMS/gKgqGpAQkSCITGhePOr1ujT5ahnHByo
-bItHy8utKS3yI4DtbH5DxdES6Jm161MsuZhhRANnIXUKK4UJ9yY6QxwSa5Pu8Zk=
-=5OiO
+iQEcBAEBCAAGBQJSzRheAAoJEAmJmMX429reVoMH/A6PfHmUTobVqdvjLnyPCtgV
++lRALegnbJY0tnoM3vDAwvqfpJ8uvRQboimzUq4Z6Pd6428JEkEXDpHTv4GGfXyR
+GNuUOjfYyBuzTDevB6qCb9IT3XNtvoOHCV5o3Wr6zkCVNGm0/9RXSLfMfOWXDLvu
+lss9323RYHstmR7Q6t3xJ+FhBa7NL1mmxb4A3JnTdZqnh1SWZ/a1KXJutkye1IHV
+N184biSCotfBK3aMhpx6gwjag7ak8zV7d0768+0KxRnA49QbqGp2d3FZfz3nXgs4
+kxxjCDOtFP/lJLbgdWmxGVt7K4DfZgnj6egg7u6T3HXN53le3z1u/EkwEYyoigk=
+=9dUg
 -----END PGP SIGNATURE-----
