@@ -2,18 +2,20 @@
 Hash: SHA256
 
 DIST qross-0.2.2.tar.bz2 3099984 SHA256 02792ba25bdef11b444ca1d0b9f53fdd9aac9539307deb689b585967391a7c7b SHA512 b1c6a0af64651cd16985a81e9613e8a21c0e0a42999e0d4656a40aa21864d52f815e3825eec577fa9856146e12413a70edcf9a85f8a5fb094b6b7b7ff031a0fa WHIRLPOOL fd1714f4a2825ea304945353d3e808e0056b4374d8c575f49ead11c5577095dc0c5066fbf40d5e3fe0f30a107c968bce5bf59c2815e05ccff526a78722b9f13e
+DIST qrosscore-0.3.1.tar.gz 3963408 SHA256 0573ece8c78fc836544a87adbb3a61afb1b8821cc11b289935d4b650c2d6bc85 SHA512 0dba2257a18ad36ec5348dc9a298d264f5d3ca1cd08e1bfce50259da85ccf3ebec9bad5e578b99e870948888789e76ce33cc8aaf7538c7da6a732a5c76630be6 WHIRLPOOL ef1c9a6fa7fad7a49c9237ed47bc2e7694d1c89639e62bfcd21c5d253ab40147c8694546db778ed6a16ca06e08a551b5a7a5aacbcc192659291846d87df313d0
 EBUILD qrosscore-0.2.2.ebuild 644 SHA256 92f1742ca981bbcada98dbc0b8b1e707401dbf98e1ca03c5c8fa4f6729a712b3 SHA512 8bac5a74287306ccb4b4eb33b3f522dc654398f2bfad63de43dd0fe3e223a1b4dccb3d04081d6590d0653519fcb92d4397f0513d7305d36a5f2107109a13096d WHIRLPOOL e854f99c070b46ebb785a3cd16ee85b126394cb5a3102a83224e005c7c7bac49990e18d5ad3d17ba3e37cdf0cffd7ae0aaefdf6d8d170925ac3f0ca2dda2e320
+EBUILD qrosscore-0.3.1.ebuild 665 SHA256 77905066ed309dd176f49469c933325d3c1982ddf2916ed09d1134f15a6a5af9 SHA512 e3356f8507c938ae9c7fea6e6c4054c23427ff2db21649f5010d0be525a9cf7f497ce48a9f146f6be666abbf1bd3e62cb13875c57ccc6a5ba784a2f4dda8cb48 WHIRLPOOL d0429678fd27eaba5cf618b6ec9038138bd910f15d0c45686415b813e3a6c4a5058f652e2bad68fc6a6b11730bdbbfbe3a9b1c7acbea57231f52488d83c77777
 EBUILD qrosscore-9999.ebuild 649 SHA256 8e2dc83d105b8d1acb2e2cffba88bbd0e3621027661e406355e8cf6b6ede388f SHA512 74af639246bf7e4b6eae086ccc809a2a0d9bce123630126cf104497a1217754d0c33cdc5c75d2076584248197d23f3fab529bbdca440bc3afa29d4cf1a309499 WHIRLPOOL e0840c9c88de3960628e0856dc23e8e98fbf87ddec3c45b3a2e0d2070175456c48e22d46d8f60d02d741cf6cd5876ffb0d7ad9967fc6497bce6892ef806e7dac
-MISC ChangeLog 1459 SHA256 6d83611b5bc11447fb0ea95fcd52b829aceb0390f2da65f17fd50661cdf4d33f SHA512 ac0d5e4e5f6dacaea045ef8d1b5abd221ef0061dbbb84590db293230f280dd4e34a7b83be649fdfdf349bfa63cf932eeedf451ed8763e8d2e2a9884d70c3a1ec WHIRLPOOL ce780abec3825e4de3a8f17214b41422b99ae869b88e20695d5d55b690d38ce9b54bbbd506f84063de16108c91d1226e13622727cb25e25a868d5ea6b357c470
+MISC ChangeLog 1607 SHA256 7bee8a4c88687206f7f124b42b40d969498d61a6a1f0e17cd795b419f899d5a0 SHA512 d97a2c35af3fcb6d550a4d1af51859f6789524b21ea95202bbad6578fb8bcd12a997e2563c744d8017795b2a2d26abc0d4400f55d5069878b413ef15954c544a WHIRLPOOL a7172939a64abd430e62c2c72a31f153b82e1197589fa7b95d30971daccb061ab79924657c718549a0e578b2a0e1beb19552e3a80b9c1171fa81b48ec6f39f96
 MISC metadata.xml 254 SHA256 8132644fd44b0a97affa5cf95059bafc359d39aad5afe18a44982e7db21e3da1 SHA512 28c7e63fc4e3475b098cea0f28bd8dbc64819fdc6879e561a90b3931dea8c0b4553cfdd75c53bb3c21472d39a83c3719a0869e97dfc33e8dddc6881170d79aa5 WHIRLPOOL a9c54929759fdef50afde7f52724ce3f00f6a1238be1551635f99fabffa13ce1cb48399357b7e8f0026a693e59e1e72bd10f59cd9f137bd87276dbb460902f61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSvZd+AAoJEAmJmMX429ren1EH/0WgRy0XmgdqCZqqa50U26ZR
-l/oBJy1bo4nld4bSwMRoWXfx1+nLXJ386JDXBz9glBqwmyCdT4ZOMQOnKs2mmbJa
-d4yahRHZ6G4+7WbgrB4uKVsiEGQ5zPfW1TcyM46RSEfuJx9ZYiL1gFftTll0lfHF
-c/l2JZTxjJf86ks1K1MxbzLwJWCVRAICnlIZD2uHhXLPRCXGkaXszWosR6mJ2ifT
-q1jhGrhQguTrkRG/NW+2Q/1Ym1QIp9nqeJHzQZ5fWFxh0UwtF9d7NOVDOk8XPyAm
-eK4rPICMx5bM16DpmkKRciszNsaoIe8iWeKGsEet5TxtMeJG6k3gOPSUv3/RXak=
-=ELTS
+iQEcBAEBCAAGBQJSzRqsAAoJEAmJmMX429reU64H/jWOev2snkhR7Nkp0dyQVgE4
+Fwaw0Be4Hb9ClclTe6ku/a3ZJ0VtloQyChxZ4J4IMhmSHNWNpiaGXVf5a1UK0Ypw
+A8G0P9GRKDgJ7mNYj9fbUXByltnd2OPRfeIAQBIMQV2K10JWpsnro8rlZQY++Cjk
+jeo/OgGAjnNUWIqKDf1Mg0U/4YqAm+8igdjtP0m6VRK0MBml4vhznvQkMq9etttf
+BFb0Z63TeJVc8L/t3b0BHiM2RaXfMH6cgEQ7uxDuriYofNwGqgbBgoCbeZXdUv2K
+kA/BNhTkYk3U6XBoKjGY1uTnpvgbmwhPdYs44nakVCb0YVGLBHgvVxSkcXG9V2I=
+=ZT5D
 -----END PGP SIGNATURE-----
