@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/designer:4 dev-qt/qtscript:4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=KDE-free version of Kross (core libraries and Qt Script backend)
+EAPI=3
+HOMEPAGE=http://github.com/0xd34df00d/Qross
+IUSE=debug
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/designer:4 dev-qt/qtscript:4
+SLOT=0
+SRC_URI=https://github.com/0xd34df00d/Qross/archive/0.3.1.tar.gz -> qrosscore-0.3.1.tar.gz
+_eclasses_=cmake-utils	0ff4fbaea3a849e97cb3e0b87ab99136	eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	62e05953761097ae84a70d6c7a3e2c9c	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953
+_md5_=9dc97724b2a95b5d18bb7f712f840c37
