@@ -1,6 +1,11 @@
 # ChangeLog for app-leechcraft/liblaretz
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/liblaretz/ChangeLog,v 1.1 2013/07/20 20:18:03 maksbotan Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/liblaretz/ChangeLog,v 1.2 2014/01/08 09:20:43 maksbotan Exp $
+
+*liblaretz-0.1.0 (08 Jan 2014)
+
+  08 Jan 2014; Maxim Koltsov <maksbotan@gentoo.org> +liblaretz-0.1.0.ebuild:
+  Add 0.1.0 release, thanks to 0xd34df00d
 
 *liblaretz-9999 (20 Jul 2013)
 
