@@ -1,6 +1,11 @@
 # ChangeLog for app-leechcraft/lcpackgen
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lcpackgen/ChangeLog,v 1.1 2013/07/03 16:52:54 maksbotan Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lcpackgen/ChangeLog,v 1.2 2014/01/08 09:25:04 maksbotan Exp $
+
+*lcpackgen-1.3 (08 Jan 2014)
+
+  08 Jan 2014; Maxim Koltsov <maksbotan@gentoo.org> +lcpackgen-1.3.ebuild:
+  Bump to 1.3, thanks to 0xd34df00d
 
 *lcpackgen-1.2 (03 Jul 2013)
 
